apm-poc/k8s/depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springfront
spec:
  replicas: 1
  selector:
    matchLabels:
      name: springfront
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        name: springfront
    spec:
      containers:
      - image: example-user/springfront:v2
        command: ["/bin/sh"]
        args: ["-c", "java -jar spring-front.jar"]
        imagePullPolicy: Always
        name: springfront
        ports:
          - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: demo-app
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        name: demo-app
    spec:
      containers:
      - image: example-user/demo-app:v2
        command: ["/bin/sh"]
        args: ["-c", "java -jar spring-back.jar --server.port=8088"]
        imagePullPolicy: Always
        name: demo-app
        ports:
          - containerPort: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: springfront
spec:
  type: LoadBalancer
  ports:
  - name: springfront-port 
    port: 8080 
    protocol: TCP
    targetPort: 8080 
  selector:
    name: springfront
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app
spec:
  ports:
  - name: demo-app-port 
    port: 8088 
    protocol: TCP
    targetPort: 8088 
  selector:
    name: demo-app
